[B][COLOR red]Update - v3.6.8 - May 17, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed random issue with busy dialog not closing.[/I]
[COLOR yellow]--[/COLOR][I] Added database table check to avoid bogus log errors.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue if user cleared Provider cache and then
    selected Rescrape the table was now empty and halted scrapping.[/I]
[COLOR yellow]--[/COLOR][I] Because of the changes to item #2 and 3 above the
    setting option "Allow Rescrape to first clear item providers"
    has now been removed and hard coded as the default.[/I]

[B][COLOR red]Update - v3.6.7 - May 14, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Library .strm playback. Previous update added ability
    to compare meta received from tmdbhelper vs. Venom's
    cached meta and use the largest.  I neglected that .strm
    files are also player files and meta sent is None type. Now
    I compare this as well and if the item is cached that meta
    is now used vs. scraped meta saved locally, which is more
    limited than Venom's cached meta.[/I]

[B][COLOR red]Update - v3.6.6 - May 14, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Remove HVAC and Remove 3D options.
    Previousely there would be random failures if specific
    free hosters were enabled.  Some free hosters were
    missing 'info' keys in the sources dict.  This has been
    fixed in both Venom and missing keys added to
    OpenScrapers.[/I]

[B][COLOR red]Update - v3.6.5 - May 12, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added new setting option to disable Cloudflare
    protected providers due to recent challenge failures.[/I]
[COLOR yellow]--[/COLOR][I] Reorganized all settings under "Source Options"
    to better follow the flow of scrapping from start to results.[/I]
[COLOR yellow]--[/COLOR][I] Changed all Source filtering options to be "Remove"
    options.  Previously options were "Enable" or "Remove"
    and this just seems to be cleaner.[/I]