@@ -215,7 +215,6 @@ def request(url, close=True, redirect=True, error=False, proxy=None, post=None, 
 				content = int(response.headers['Content-Length'])
 			except:
 				content = (2049 * 1024)
-
 			if content < (2048 * 1024):
 				return
 			result = response.read(16 * 1024)
